[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://src/scenes/PauseOverlay.gd" id=1]
[ext_resource type="Script" path="res://src/ui/GlassPanel.gd" id=2]
[ext_resource type="Theme" path="res://src/ui/UiTheme.tres" id=3]
[ext_resource type="Script" path="res://src/ui/LiquidGlassButton.gd" id=4]

[node name="PauseOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
theme = ExtResource( 3 )

[node name="Dim" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.45)

[node name="Panel" type="ColorRect" parent="."]
script = ExtResource( 2 )
anchor_left = 0.13
anchor_top = 0.28
anchor_right = 0.87
anchor_bottom = 0.72
color = Color(0.03, 0.07, 0.15, 0.68)

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1
theme_override_constants/separation = 18

[node name="TopInset" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 0)
mouse_filter = 2

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Paused"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 48

[node name="Resume" type="Button" parent="Panel/VBox"]
script = ExtResource( 4 )
text = "Resume"
custom_minimum_size = Vector2(0, 102)

[node name="Quit" type="Button" parent="Panel/VBox"]
script = ExtResource( 4 )
text = "Quit"
custom_minimum_size = Vector2(0, 102)

[node name="BottomInset" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 0)
mouse_filter = 2

[connection signal="pressed" from="Panel/VBox/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBox/Quit" to="." method="_on_quit_pressed"]
